--- a/src/App.css
+++ b/src/App.css
@@ -103,3 +103,9 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+  margin: 0 auto;
+}
