Menampilkan data useContext ke list Daftar Movie

--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,10 @@ table {
   width: 50%;
   margin: 0 auto;
 }
+
+
+table th, table td {
+  padding: 8px;
+  /* text-align: left; */
+  border-bottom: 1px solid #ddd;
+}
